fixed vertical align of login button

--- a/src/assets/scss/_elements.scss
+++ b/src/assets/scss/_elements.scss
@@ -100,7 +100,7 @@
 	width: 1.25rem;
 	text-align: center;
 	padding: 0;
-	top: .375rem;
+	top: -.275rem;
 	.iconic[data-glyph]:before {
 		font-size: 12px;
 		color: $lightgray;
